<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ab.sketchflow.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigattion_drawing_layout"
            app:destination="@id/navigattion_drawing_layout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_colouring"
        android:name="com.ab.sketchflow.ui.colouring.ColouringFragment"
        android:label="@string/title_colouring"
        tools:layout="@layout/fragment_colouring" />

    <fragment
        android:id="@+id/navigation_live_drawing"
        android:name="com.ab.sketchflow.ui.livedrawing.LiveDrawingFragment"
        android:label="@string/title_live_drawing"
        tools:layout="@layout/fragment_live_drawing" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.ab.sketchflow.ui.challenges.ChallengesFragment"
        android:label="@string/title_challenges"
        tools:layout="@layout/fragment_challenges" />

    <fragment
        android:id="@+id/navigattion_drawing_layout"
        android:name="com.ab.sketchflow.ui.draw.DrawingFragment"
        android:label="@string/drawing"
        tools:layout="@layout/fragment_drawing" >
        <action
            android:id="@+id/action_navigattion_drawing_layout_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>